<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group_1">
        <item
                android:id="@+id/menu_item_1"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/menu_item_1"/>
        <item
                android:id="@+id/menu_item_2"
                android:icon="@android:drawable/ic_dialog_alert"
                android:title="@string/menu_item_2"/>
        <item
                android:id="@+id/menu_item_3"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="@string/menu_item_3"/>
    </group>

    <group android:id="@+id/menu_group_2">
        <item
                android:id="@+id/menu_item_4"
                android:title="@string/menu_item_4"/>
        <item
                android:id="@+id/menu_item_5"
                android:title="@string/menu_item_5"/>
    </group>

    <item android:title="@string/menu_group_3_title">
        <menu>
            <item
                    android:id="@+id/menu_item_6"
                    android:icon="@android:drawable/ic_dialog_map"
                    android:title="@string/menu_item_6"/>
            <item
                    android:id="@+id/menu_item_7"
                    android:icon="@android:drawable/ic_dialog_info"
                    android:title="@string/menu_item_7"/>
        </menu>
    </item>

</menu>
